third_party/move/move-compiler-v2/tests/ability-check/typing/eq_invalid2.exp

Diagnostics:
error: local `r` of type `R` does not have the `drop` ability
   ┌─ tests/ability-check/typing/eq_invalid2.move:11:14
   │
11 │         r == r;
   │              ^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `G1<T>` does not have the `drop` ability
   ┌─ tests/ability-check/typing/eq_invalid2.move:15:9
   │
15 │         G1{ f: t } == G1{ f: t };
   │         ^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used

error: value of type `G1<T>` does not have the `drop` ability
   ┌─ tests/ability-check/typing/eq_invalid2.move:15:23
   │
15 │         G1{ f: t } == G1{ f: t };
   │                       ^^^^^^^^^^ still borrowed but will be implicitly dropped later since it is no longer used
